# LongQt-model

./: .gitignore  CMakeLists.txt  LICENSE  LongQt-model.cmake  LongQt-model.qrc  LongQt-modelConfig.cmake  README.md  cellpvars.h  cellutils.cpp  cellutils.h  gridmeasuremanager.cpp  measure.h  measuremanager.cpp  model.pri  modellib.pro  pvarscell.h  pvarscurrentclamp.cpp  pvarscurrentclamp.h  pvarsgrid.cpp  pvarsgrid.h  pvarsvoltageclamp.cpp  pvarsvoltageclamp.h  runsim.cpp  runsim.h  settingsIO.cpp  settingsIO.h
.github/workflows/: build.yml
cell/: FR.cpp  FR.h  OHaraRudy.cpp  OHaraRudy.h  OHaraRudyEndo.cpp  atrial.cpp  atrial.h  cell.cpp  cell.h  cell_kernel.cpp  cell_kernel.h  gpbatrial.cpp  gpbatrial.h  gpbatrialRyr.cpp  gpbatrialSE.cpp  gpbatrialSE.h  gpbatrialWT.cpp  gpbatrialWT.h  gpbatrialonal17.cc  gpbatrialonal17.h  gpbhuman.cpp  gpbhuman.h  gridCell.cpp  gridCell.h  hrd09.h  kurata08.cpp  kurata08.h  tnnp04.h
protocol/: currentClampProtocol.cpp  currentClampProtocol.h  gridProtocol.cpp  gridProtocol.h  protocol.cpp  protocol.h  voltageClampProtocol.cpp  voltageClampProtocol.h
resources/: protocolCellDefaults.json
src/: LongQt-model.cmake  cellutils.cpp  cellutils.h  cellutils.hpp  cellutils_core.h  cellutils_core.hpp  datareader.cpp  datareader.h  gridmeasuremanager.cpp  gridmeasuremanager.h  iobase.cpp  iobase.h  logger.cpp  logger.h  measure.cpp  measure.h  measuredefault.cpp  measuredefault.h  measurefactory.cpp  measurefactory.h  measuremanager.cpp  measuremanager.h  measurevoltage.cpp  measurevoltage.h  measurewave.cpp  measurewave.h  model.pri  pvarscell.cpp  pvarscell.h  pvarscurrentclamp.cpp  pvarscurrentclamp.h  pvarsgrid.cpp  pvarsgrid.h  pvarsvoltageclamp.cpp  pvarsvoltageclamp.h  runsim.cpp  runsim.h  settingsIO.cpp  settingsIO.h  threadpool.cpp  (+2 more)
src/cell/: FR.cpp  FR.h  Koivumaki.cpp  Koivumaki.h  OHaraRudy.cpp  OHaraRudy.h  OHaraRudyEndo.cpp  OHaraRudyEndo.h  OHaraRudyEpi.cpp  OHaraRudyEpi.h  OHaraRudyM.cpp  OHaraRudyM.h  atrial.cpp  atrial.h  br04.cpp  br04.h  cell.cpp  cell.h  cell_kernel.cpp  cell_kernel.h  cell_kernel.hpp  coupledinexcitablecell.cpp  coupledinexcitablecell.h  gpbatrial.cpp  gpbatrial.h  gpbatrial_different_ina.cpp  gpbatrial_different_ina.h  gpbatrialonal17.cpp  gpbatrialonal17.h  gpbhuman.cpp  gpbhuman.h  gridCell.cpp  gridCell.h  hrd09.cpp  hrd09.h  hrd09_bz.cpp  inexcitablecell.cpp  inexcitablecell.h  ksan.cpp  ksan.h  (+4 more)
src/protocol/: currentClampProtocol.cpp  currentClampProtocol.h  fileoutputgenerator.cpp  fileoutputgenerator.h  gridProtocol.cpp  gridProtocol.h  protocol.cpp  protocol.h  voltageClampProtocol.cpp  voltageClampProtocol.h
src/structure/: fiber.cpp  fiber.h  fiber.h.autosave  grid.cpp  grid.h  grid.h.autosave  node.cpp  node.h  threadpool.cpp  threadpool.h
structure/: fiber.cpp  fiber.h  grid.cpp  grid.h  node.cpp  node.h
tests/: cell_test.h  celltest.h  cellutils_test.h  gtest_dependency.pri  hrd09.tsv  hrd09_header.tsv  logger_test.h  main.cpp  measure_test.h  model-tests.pro  node_test.h  protocol_test.h  protocoltest.h  runsim_test.h  threadpool_test.h  time_square_wave.csv  value_square_wave.csv
